# servinel

./: Cargo.toml  LICENSE  README.md
examples/: servinel-compose.yaml
examples/server1/: main.py  pyproject.toml
examples/server2/: main.py  pyproject.toml
src/: cli.rs  compose.rs  error.rs  logs.rs  main.rs  metrics.rs  util.rs
src/daemon/: mod.rs  server.rs  state.rs  supervisor.rs
src/ipc/: client.rs  protocol.rs  server.rs
src/tui/: app.rs  mod.rs  ui.rs
