[package]
name = "servinel"
version = "0.0.2"
edition = "2024"
authors = ["Rashikraj Shrestha <rashik123.rs@gmail.com>"]
description = "Service manager and supervisor with TUI dashboard"
license = "MIT"
homepage = "https://github.com/Rashik-raj/servinel"
repository = "https://github.com/Rashik-raj/servinel"
keywords = ["service", "manager", "supervisor", "tui", "dashboard"]
categories = ["command-line-utilities", "development-tools"]





[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0.138"
ratatui = "0.29.0"
crossterm = "0.28.1"
sysinfo = "0.33.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
thiserror = "2.0.11"
tui-piechart = "0.2.8"
clap_complete = "4.5.38"
libc = "0.2"
futures = "0.3.31"
