[package]
name = "servinel"
version = "0.0.4"
edition = "2024"
authors = ["Rashikraj Shrestha <rashik123.rs@gmail.com>"]
description = "Service manager and supervisor with TUI dashboard"
license = "MIT"
homepage = "https://github.com/Rashik-raj/servinel"
repository = "https://github.com/Rashik-raj/servinel"
keywords = ["service", "manager", "supervisor", "tui", "dashboard"]
categories = ["command-line-utilities", "development-tools"]


[dependencies]
clap = { version = "4.5.58", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_yaml = "0.9.33"
serde_json = "1.0.138"
chrono = { version = "0.4", features = ["serde"] }
ratatui = "0.30.0"
crossterm = "0.29.0"
sysinfo = "0.38.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
thiserror = "2.0.18"

clap_complete = "4.5.66"
libc = "0.2.182"
futures = "0.3.32"
arboard = "3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
